tests/NormalTests/paczka1/fuzzy1/59033014.err
Error in line 6: usba A334 55,3
Error in line 9: usba S457 48,6
Error in line 18: gdA A334 47,2
Error in line 14: 1Wrj S235 79,8
Error in line 27: 1Wrj A334 99,4
